# nids-xai

./: Makefile  README.md  best_model.pth  cic-collection_data.ipynb  main_torch_notebook_classweigh_focalLoss.ipynb  main_torch_notebook_classweigh_focalLoss_combined_dataset.ipynb  pyproject.toml  requirements.txt
nids_xai/: __init__.py  dataset.py  features.py  plots.py
nids_xai/modeling/: predict.py  train.py
notebooks/: 1.0-NIDS.ipynb  1.1-SafeMlTechnique.ipynb  18only_nids.ipynb  combine_dataset.ipynb  nosmote_nids.ipynb  sohams_notebook.ipynb
notebooks/V10/: NIDS_v10.ipynb  nids_v10.pth  nids_v10_best.pth  nids_v10_modelState.pth
notebooks/V9/: NIDS_v9.ipynb  nids_v9.pth  nids_v9_best.pth  nids_v9_modelState.pth
notebooks/Version1/: 1.0-NIDS.ipynb
notebooks/Version2/: NIDS_v2.ipynb
notebooks/Version3/: NIDS_v3.ipynb  nids_v3.h5
notebooks/Version5/: nids_v5.pth
notebooks/Version6/: NIDS_v6.ipynb  nids_v6.pth  nids_v6_modelState.pth
notebooks/Version8/: NIDS_v8.ipynb  nids_v8.pth  nids_v8_modelState.pth  nids_v8_weight.pth
